docs: update java tips